Contact page is added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,17 +10,17 @@ body{
     font-size: 20px;
     padding: 6px;
     width: 100px;
-    height: 50px;
+    height: 40px;
 }
 .btn-name{
     background: #4aaaa5;
     color: #fff;
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-size:24px;
-    height: 58px;
-    width: 185px;
+        height: 70px;
+    width: 190px;
     display: inline-block;
-    padding: 10px;
+    padding: 12px;
     font-weight: bold;
     margin-bottom: -1px !important;
     text-decoration: none !important;
@@ -36,12 +36,22 @@ header{
     border-bottom: 2px solid #ddd;
 }
 
+.header{
+    height: 70px;
+    width: 100%;
+    background: #fff;
+}
+
+.header-content{
+    width: 960px;
+    height: 70px;
+}
 .contact{
     background: white;
     border: 1px solid #ddd;
-    width: 666px;
-    height: 430px;
-    margin:0px 70px 30px 0px;
+    width: 650px;
+    height: 450px;
+    margin:0px 10px 30px 0px;
 
 }
 #contact-border{
@@ -51,7 +61,7 @@ header{
 .connect-me{
     background: white;
     height: 150px;
-    width: 255px;
+    width: 270px;
     padding: 2px;
     border: 1px solid #ddd;
 
@@ -59,6 +69,7 @@ header{
 
 .main-container{
     padding: 112px 30px 10px 30px;
+    width: 960px;
 }
 
 
