Portfolio page is added

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,41 +1,24 @@
-.body {
-    background: rgb(230, 219, 219);
-}
-.myNavbar {
-    height: 80px;
-    padding: 20px;   
-    border:1px solid #ddd;
+header .navbar-default {
+    background: #fff !important;
+    border: none;
+    border-bottom: 1px solid #ccc;
 
 }
 
-.header {
-    width: 920px;
+header {
+    height: 66px;
 }
 
-.profile {
-    background: #4aaaa5;    
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:24px;
-    height: 80px;
-    width: 190px;
-    color:#fff;
-    position: absolute;
-    top: -21px;
-    text-align: center;
-    padding: 28px 0px;
-}
-
-.profile:hover {
+.navbar-header .username {
     background: #4aaaa5;
-    color: #fff;
-
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    height: 66px;
+    width: 140px;
 }
 
-.header ul li a {
-    color: #ccc;
-}
-
-.header ul li + li::before {
+.navbar-collapse .menu li + li::before {
     content: "|";
     color: #ccc;
     float: left;
@@ -43,91 +26,94 @@
     display: block;
     padding-top: 15px;
     padding-bottom: 15px;
+
 }
 
 .content {
-    width: 930px;
-    padding: 112px 15px;
-
+    padding: 20px;
+    background: rgb(236, 232, 232);
 }
 
 .portfolio {
-    border: 1px solid #ddd;
-    margin-right: 20px;
-    width: 650px;
-    height: 700px;
+    border: 1px solid #ccc;
     background: #fff;
-}
-.connect-me {
-    border: 1px solid #ddd;
-    width: 250px;
-    height: 160px;
-    background: #fff;
-
+    padding: 45px;
+    margin-right: 60px;
+    margin-bottom: 20px;
 }
 
-.portfolio .portfolio-title {
-    color: #4aaaa5;
-    font-family:  'Georgia', Times, Times New Roman, serif;
-    font-size:30px;
-    font-weight: bold;
-}
-
-.portfolio .portfolio-border {
-     border: 1px solid #ccc;
-}
-
-.connect-me .connect-me-title {
+.portfolio .portfolio-header .portfolio-header-title {
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:24px;
+    font-size:28px;
     font-weight: bold;
-    text-align: center;
-
 }
 
-.connect-me .connect-me-border {
-    width: 205px;
-    margin-top: 0px;
+.portfolio .portfolio-header .portfolio-header-border {
+    border: 1px solid #ccc;
 }
 
 
-.connect-me .connect-me-footer img {
-    width: 45px;
-    height: 45px;
-}
-.portfolio .imgs-container {
-    padding: 10px;
-}
-.portfolio .imgs-container .img-box {
-     position: relative;
-     padding: 0px;
-     margin: 20px 38px;
-     width: 220px;
-     height: 200px;
-}
-
-.portfolio .imgs-container img {
+.portfolio .portfolio-imgs-container {
     width: 100%;
-    max-width: 100%;
 }
-.portfolio .imgs-container .img-box .img-box-text {
+
+.portfolio .portfolio-imgs-container .img-box {
+    position: relative;
+    padding: 0;
+    margin: 20px 38px;
+    width: 220px;
+    height: 200px;
+}
+
+.portfolio .portfolio-imgs-container .img-box img {
+    width: 100%;
+}
+
+.portfolio .portfolio-imgs-container .img-box .img-box-text {
     position: absolute;
     background: #4aaaa5;    
     left: 0;
-    bottom: 0%;
+    bottom: 5%;
     text-align: center;
-    padding: 10px;
+    padding: 15px 0px;
     box-sizing: border-box;
     color: #fff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     width: 100%;
     height: 50px;
 }
-
-.footer {
-    background: #666;
-    text-align: center;
-    color: #fff;
+.connect-me {
+    border: 1px solid #ccc;
+    background: #fff;
     padding: 20px;
+}
+
+.connect-me .connect-me-header {
+    text-align: center;
+}
+
+.connect-me .connect-me-header .connect-me-header-title {
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size:24px;
+    font-weight: bold;
+}
+
+.connect-me .connect-me-imgs-container {
+    padding: 20px;
+}
+
+.connect-me .connect-me-imgs-container img {
+    width: 40px;
+    height: 40px;
+}
+
+
+.footer .navbar-default {
+    background: #666 !important;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 20px;
+    color: #fff;
+    border-top: 8px solid #4aaaa5;
 }
