--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,97 +1,84 @@
-body{
-    background: rgb(240, 237, 237);
-    height: 1000px;
+header .navbar-default {
+    background: #fff !important;
+    border: none;
+    border-bottom: 1px solid #ccc;
+
 }
 
-.submit{
-    background: #4aaaa5;
-    color: #fff;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 20px;
-    padding: 6px;
-    width: 100px;
-    height: 40px;
+header {
+    height: 66px;
 }
-.btn-name{
+
+.navbar-header .username {
     background: #4aaaa5;
-    color: #fff;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    height: 66px;
+    width: 140px;
+}
+
+.navbar-header .username:hover {
+    background: #4aaaa5;
+    color: white;
+}
+
+.navbar-collapse .menu li + li::before {
+    content: "|";
+    color: #ccc;
+    float: left;
+    position: relative;
+    display: block;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+
+.content {
+    padding: 20px;
+    background: rgb(236, 232, 232);
+}
+
+.header-title {
+    color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:24px;
-    height: 60px;
-    width: 190px;
-    display: inline-block;
-    padding: 12px;
+    font-size:28px;
     font-weight: bold;
-    margin-bottom: -1px !important;
-    text-decoration: none !important;
 }
 
-.btn-name:hover{
-    background: #4aaaa5;
-    color: #fff;
-
-}
-
-header{
-    border-bottom: 2px solid #ddd;
-}
-
-.header{
-    height: 70px;
-    width: 100%;
-    background: #fff;
-    padding: 10px;
-}
-
-.contact{
-    background: white;
-    border: 1px solid #ddd;
-    width: 650px;
-    height: 450px;
-    margin:0px 10px 30px 0px;
-
-}
-#contact-border{
+.header-border {
     border: 1px solid #ccc;
 }
 
-.connect-me{
-    background: white;
-    height: 150px;
-    width: 270px;
-    padding: 2px;
-    border: 1px solid #ddd;
-
+.connect-me {
+    border: 1px solid #ccc;
+    background: #fff;
+    padding: 20px;
 }
 
-.main-container{
-    padding: 112px 30px 10px 30px;
-    width: 960px;
+.connect-me .connect-me-header {
+    text-align: center;
 }
 
+.connect-me .connect-me-header .connect-me-header-title {
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size:24px;
+    font-weight: bold;
+}
 
-.connect-me img{
+.connect-me .connect-me-imgs-container {
+    padding: 20px;
+}
+
+.connect-me .connect-me-imgs-container img {
     width: 40px;
     height: 40px;
 }
 
-.contact-header #contact-title{
-    color: #4aaaa5;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size:24px;
-    font-weight: bold;
-}
 
-.connect-me #connect-title{
-    color: #4aaaa5;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size:24px;
-    font-weight: bold;
-}
-
-
-.footer{
-    background: #666;
+.footer .navbar-default {
+    background: #666 !important;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 20px;
     color: #fff;
